# Dockerized_ROS2_Project

./: .gitignore  Dockerfile  README.md  docker-compose.yml
tech_assess_ws/src/Universal_Robots_ROS2_Description/urdf/: ur.urdf.xacro
tech_assess_ws/src/joint_traj_graph/: package.xml  setup.cfg  setup.py
tech_assess_ws/src/joint_traj_graph/joint_traj_graph/: joint_traj.py
tech_assess_ws/src/linear_algebra_service/: CMakeLists.txt  package.xml
tech_assess_ws/src/linear_algebra_service/config/: request.yaml
tech_assess_ws/src/linear_algebra_service/src/: least_squares_client.cpp  least_squares_server.cpp  simple_publisher.cpp  simple_subscriber.cpp
tech_assess_ws/src/tech_assess_msgs/: CMakeLists.txt  package.xml
tech_assess_ws/src/tech_assess_msgs/srv/: LeastSquares.srv
tech_assess_ws/src/ur20_display/: CMakeLists.txt  package.xml
tech_assess_ws/src/ur20_display/config/: joint_angles.yaml
tech_assess_ws/src/ur20_display/launch/: ur20_display.launch.py
tech_assess_ws/src/ur20_display/rviz/: display.rviz  display2.rviz
tech_assess_ws/src/ur20_display/src/: custom_state_publisher.cpp
